name:                lang
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable lang
  main-is:             Main.hs

  other-modules:       Alphabetise
                       Combinators
                       Core
                       CpsEval
                       CpsPretty
                       CpsTransform
                       CpsTypes
                       DataTypes
                       ExprParser
                       Interpret
                       LambdaLift
                       LexState
                       Lexer
                       Parser
                       Pretty
                       PrettyExpr
                       PrettyOp
                       PrettyTopLevel
                       Primitives
                       SourceMap
                       State
                       Tokens
                       TopLevelParser
                       TopLevelTypeCheck
                       TypeCheck
                       TypeTypes

  build-depends:       base,
                       bytestring,
                       containers,
                       mtl

  ghc-options:         -Wall -O3
  hs-source-dirs:      src
  default-language:    Haskell2010
