name:                lang
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              John Haynes
maintainer:          john.andrew.haynes@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable lang
  main-is:             Main.hs

  other-modules:       Alphabetise
                       Cleanup
                       Combinators
                       Core
                       CpsClosureConvert
                       CpsLang
                       CpsPrint
                       CpsTransform
                       DataTypes
                       ExprParser
                       Interpret
                       LexState
                       Lexer
                       Parser
                       Pretty
                       PrettyExpr
                       PrettyOp
                       PrettyTopLevel
                       Primitives
                       SourceMap
                       State
                       Tokens
                       TopLevelParser
                       TypeTypes

  build-depends:       base,
                       bytestring,
                       containers,
                       mtl

  ghc-options:         -Wall -O3
  hs-source-dirs:      src
  default-language:    Haskell2010
